# dilbert-viewer-py

./: .isort.cfg  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  cache_init.sql  composer.json  launch_site.sh  pyproject.toml  requirements.txt  setup.cfg
src/: .htaccess  comics.py  constants.py  get_dilbert.php  get_dilbert.py  get_random_date.py  index.php  latest.py  layout.php  main.py  params.php  pqdict.py  random.php  scraper.py  styles.css  utils.py
src/static/: layout.php  styles.css
static/: styles.css
templates/: layout.html
