[tool.poetry]
name = "dilbert-viewer"
version = "0.1.0"
description = "Simple viewer webpage for Dilbert by Scott Adams"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.1"
aiohttp = "^3.7.3"
asyncpg = "^0.21.0"
Hypercorn = "^0.11.1"
Quart = "^0.14.1"
uvloop = "^0.14.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pydocstyle]
convention = "google"
