[tool.poetry]
name = "dilbert-viewer"
version = "0.1.0"
description = "Simple viewer webpage for Dilbert by Scott Adams"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.1"
aiohttp = "^3.8.0"
asyncpg = "^0.25.0"
Hypercorn = "^0.12.0"
Quart = "^0.16.0"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"
